# maritime-perception-replay-bench

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-analysis.txt  requirements.txt
configs/: acoustic_lane_decision.yaml  acoustic_sample_manifest.yaml  active_learning_notes.yaml  architecture_diagrams.yaml  artifact_layout.yaml  artifact_registry.yaml  artifact_strategy.yaml  benchmark_scenarios.yaml  benchmark_summary.yaml  clean_room_setup.yaml  datasets.yaml  demo_package.yaml  demo_stable_release.yaml  domain_shift_eval.yaml  failure_analysis.yaml  failure_slices.yaml  field_debugging.yaml  hearmyship_dataset.yaml  hearmyship_finetune.yaml  labeling_policy.yaml  limitations.yaml  minio_artifact_store.yaml  model_choices.yaml  modern_analysis_tools.yaml  multimodal_demo_renderer.yaml  multimodal_demo_samples.example.yaml  multimodal_extension_notes.yaml  multimodal_replay_manifest.example.yaml  oak_live_perception.yaml  oak_setup.yaml  observability_notes.yaml  part1_acceptance.yaml  perception_core.yaml  project_scope.yaml  qos_profiles.yaml  quickstart.yaml  replay.yaml  replay_vs_live.yaml  reproducibility_runbook.yaml  robustness_report.yaml  (+9 more)
diagrams/: artifact_flow.mmd  extension_paths.mmd  ros_graph.mmd  system_architecture.mmd
docker/: minio-compose.yml
foxglove/layouts/: acoustic_lane.json  field_debugging.json  perception_core.json  robustness_benchmark.json
release/: demo_stable_checklist.yaml
ros2_ws/src/acoustic_replay_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/acoustic_replay_node/acoustic_replay_node/: node.py  wav_reader.py  windowing.py
ros2_ws/src/acoustic_replay_node/config/: acoustic_replay.yaml
ros2_ws/src/acoustic_replay_node/launch/: acoustic_replay.launch.py
ros2_ws/src/acoustic_replay_node/test/: test_copyright.py  test_flake8.py  test_pep257.py
ros2_ws/src/annotation_miner/: package.xml  setup.cfg  setup.py
ros2_ws/src/annotation_miner/annotation_miner/: exporters.py  selection_rules.py  track_rules.py  uncertain_frame_node.py  unstable_track_node.py
ros2_ws/src/annotation_miner/config/: uncertainty_mining.yaml  unstable_track_mining.yaml
ros2_ws/src/annotation_miner/launch/: uncertainty_mining.launch.py  unstable_track_mining.launch.py
ros2_ws/src/artifact_tools/: package.xml  setup.cfg  setup.py
ros2_ws/src/artifact_tools/artifact_tools/: git_info.py  manifest.py  system_info.py
ros2_ws/src/artifact_tools/config/: manifest.yaml
ros2_ws/src/detector_node/: package.xml  setup.py
ros2_ws/src/fault_injector_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/fault_injector_node/config/: delay.yaml  frame_drop.yaml  visual_degradation.yaml
ros2_ws/src/fault_injector_node/fault_injector_node/: blur.py  compression.py  delay.py  frame_drop.py  glare.py  image_utils.py  node.py  noise.py  status.py  visual_degradation.py
ros2_ws/src/fault_injector_node/launch/: frame_drop.launch.py
ros2_ws/src/maritime_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/maritime_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/maritime_msgs/msg/: AcousticEvent.msg  AcousticEventArray.msg  AcousticWindow.msg  ContactCandidate.msg  ContactCandidateArray.msg  FrameDebug.msg  RuntimeMetric.msg  RuntimeMetricArray.msg  RuntimeMetrics.msg  TimingDiagnostic.msg  TimingDiagnosticArray.msg  Track2D.msg  Track2DArray.msg
ros2_ws/src/metrics_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/multimodal_event_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/multimodal_replay_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/oak_ingest/: package.xml  setup.cfg  setup.py
ros2_ws/src/oak_ingest/config/: oak.yaml
ros2_ws/src/oak_ingest/launch/: oak_ingest.launch.py
ros2_ws/src/oak_ingest/oak_ingest/: oak_status_node.py
ros2_ws/src/overlay_node/: package.xml  setup.py
rviz/: perception_debug.rviz
schemas/: multimodal_replay_manifest.schema.json  run_manifest.schema.json
scripts/: apply_readme_demo_media.py  benchmark_onnx_runtime.py  benchmark_openvino.py  build_benchmark_summary.py  build_failure_analysis.py  build_fiftyone_dataset.py  build_hearmyship_finetune_dataset.py  build_robustness_report.py  compare_domain_shift.py  compare_runtime_results.py  convert_smd_objectgt_to_yolo.py  create_run_artifact_bundle.py  export_cvat_task_folder.py  export_failure_examples.py  export_mined_frames_to_coco.py  inspect_video.py  prepare_hearmyship_sample.py  probe_acoustic_dataset.py  record_sample_bag.sh  render_multimodal_demo.py  run_batch_inference.py  run_online_benchmark.py  simple_yolo_labeler.py  summarize_metrics.py  upload_artifacts_to_minio.py  video_to_frames.py
(+67 files in other folders)
