<?xml version="1.0"?>
<package format="3">
  <name>acoustic_replay_node</name>
  <version>0.0.1</version>
  <description>Replay local WAV files as time-windowed ROS2 acoustic messages.</description>
  <maintainer email="rolscg@gmail.com">Rolando</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>maritime_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
