<?xml version="1.0"?>
<package format="3">
  <name>annotation_miner</name>
  <version>0.1.0</version>
  <description>Uncertain-frame mining for annotation loop triage.</description>

  <maintainer email="rolando@example.com">Rolando</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>maritime_msgs</exec_depend>
</package>
