<?xml version="1.0"?>
<package format="3">
  <name>fault_injector_node</name>
  <version>0.0.1</version>
  <description>Deterministic runtime fault injection nodes for maritime perception replay.</description>
  <maintainer email="rolscg@gmail.com">Rolando</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
